Stage 1 of snaking: moves in all 4 directions can't move backwards apple randomly appears tail works with set lengths

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,14 @@
   position: absolute;
 }
 
+.body {
+  background: black;
+  height: 50px;
+  width: 50px;
+  background-color: black;
+  position: absolute;
+}
+
 #board {
   height: 700px;
   width: 700px;
