Adding Snake Styles - having issue where turns images aren't getting into the actual snake

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,27 @@
   width: 50px;
   position: absolute;
 }
+
+.vert {
+  background-image: url('./assets/vert.png')
+}
+
+.horzi {
+  background-image: url('./assets/horzi.png')
+}
+
+.left-up {
+  background-image: url('./assets/left-up.png')
+}
+
+.right-up {
+  background-image: url('./assets/right-up.png')
+}
+
+.left-down {
+  background-image: url('./assets/left-down.png')
+}
+
+.right-down {
+  background-image: url('./assets/right-down.png')
+}
