--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,25 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif
+}
+
+header {
+  width: 700px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+button {
+  padding: 15px;
+  font-size: 30px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+button:hover {
+  border: 3px solid yellow;
+}
 #head {
   /* background: black; */
   height: 50px;
@@ -35,6 +57,24 @@
   top: 200px;
   left:150px;
   background-color: red;
+  border-radius: 10px;
+}
+
+.highScore{
+  float: right;
+}
+
+.inner {
+  height: 200px;
+  text-align: center;
+  margin-top: 30px;
+  padding: 0;
+}
+
+#reset {
+  display: block;
+  margin: auto;
+  margin-top: 20px;
 }
 
 .vert {
