--- a/src/styles.css
+++ b/src/styles.css
@@ -21,9 +21,10 @@ button:hover {
   border: 3px solid yellow;
 }
 #head {
-  height: 50px;
-  width: 50px;
+  height: 20px;
+  width: 20px;
   position: absolute;
+  background-color: black;
 }
 
 #derp{
@@ -31,32 +32,35 @@ button:hover {
 }
 
 .body {
-  height: 50px;
-  width: 50px;
+  height: 20px;
+  width: 20px;
   position: absolute;
+  background-color: rgb(85, 85, 85);
+
 }
 
 #board {
-  height: 702px;
-  width: 702px;
+  height: 282px;
+  width: 282px;
   border: 1px black solid;
   position: relative;
 }
 
 #apple {
-  height: 50px;
-  width: 50px;
+  height: 20px;
+  width: 20px;
   position: absolute;
+  background-color:rgb(0, 255, 0);
 }
 
 #endGame{
   position: absolute;
   z-index: 100;
-  width: 400px;
-  height: 300px;
-  top: 200px;
-  left:150px;
-  background-color: red;
+  width: 150px;
+  height: 125px;
+  top: 100px;
+  left: 70px;
+  background-color: rgb(0, 160, 253);
   border-radius: 10px;
 }
 
@@ -77,7 +81,7 @@ button:hover {
   margin-top: 20px;
 }
 
-.vert {
+/* .vert {
   background-image: url('./assets/vert.png')
 }
 
@@ -128,4 +132,4 @@ button:hover {
 }
 .dead-snek-down{
   background-image: url('./assets/dead-snek-down.png')
-}
+} */
